-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 25, 26
-
Component/s: hotspot
-
b16
-
generic
-
linux
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8369175 | 25.0.2 | Andreas Steiner | P2 | Closed | Fixed | b01 |
We see test gc/TestAlwaysPreTouchBehavior.java#ParallelCollector failing on Linux, for example Linux ppc64le RHEL 9.3 .
But also failures on SLES 15.6 were seen, so it is not only a problem showing up on RHEL .
We get too low RSS reported, example :
----------System.out:(2/50)----------
RSS: 257884160
Host available memory: 45643202560
----------System.err:(13/1146)----------
java.lang.RuntimeException: RSS of this process(257884160b) should be bigger than or equal to heap size(268435456b) (available memory: 45643202560): expected 257884160 > 268435456
at jdk.test.lib.Asserts.fail(Asserts.java:715)
at jdk.test.lib.Asserts.assertGreaterThan(Asserts.java:403)
at gc.TestAlwaysPreTouchBehavior.main(TestAlwaysPreTouchBehavior.java:157)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
at java.base/java.lang.Thread.run(Thread.java:1474)
But also failures on SLES 15.6 were seen, so it is not only a problem showing up on RHEL .
We get too low RSS reported, example :
----------System.out:(2/50)----------
RSS: 257884160
Host available memory: 45643202560
----------System.err:(13/1146)----------
java.lang.RuntimeException: RSS of this process(257884160b) should be bigger than or equal to heap size(268435456b) (available memory: 45643202560): expected 257884160 > 268435456
at jdk.test.lib.Asserts.fail(Asserts.java:715)
at jdk.test.lib.Asserts.assertGreaterThan(Asserts.java:403)
at gc.TestAlwaysPreTouchBehavior.main(TestAlwaysPreTouchBehavior.java:157)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
at java.base/java.lang.Thread.run(Thread.java:1474)
- backported by
-
JDK-8369175 gc/TestAlwaysPreTouchBehavior.java#<gcname> fails on Linux
-
- Closed
-
- relates to
-
JDK-8371420 Still sporadic failures of gc/TestAlwaysPreTouchBehavior.java#<gcname> on Linux after JDK-8359104
-
- Resolved
-
-
JDK-8334513 New test gc/TestAlwaysPreTouchBehavior.java is failing on MacOS aarch64
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk25u/1c9880bb
-
Commit(master)
openjdk/jdk/73df06c8
-
Review(master)
openjdk/jdk25u/209
-
Review(master)
openjdk/jdk/27192
(2 links to)