8359104: gc/TestAlwaysPreTouchBehavior.java#<gcname> fails on Linux

Reviewed-by: mbaesken, ayang